--- a/css4.html
+++ b/css4.html
@@ -26,13 +26,13 @@
 			<img src="building.png" alt="Lubricants building" class="main">
 			<div id="textbox">
 				<h2>About PPC Lubricants</h2>
-				<p><span id="subtitle">A Heritage of Specialising in Lubricants</span></p>
-				<p>Lorem ipsum dolor sit amet, <span id="emphasis">PPC Lubriants</span> consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<p><span class="subtitle">A Heritage of Specialising in Lubricants</span></p>
+				<p>Lorem ipsum dolor sit amet, <span class="emphasis">PPC Lubriants</span> consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 				<p>Lorem ipsum dolor sit amet, <span id="emphasis">PPC Lubriants</span> consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 			</div>
 			<div id="update">
 				<a href=""><img src="lub_link.png" alt="lubricant link"></a>
-				<p><a href="" alt"bulk delivery">PPC now has Bulk Delivery/Squirt Fill capabilties for DEF</a></p>
+				<p><a href="">PPC now has Bulk Delivery/Squirt Fill capabilties for DEF</a></p>
 			</div>
 			<div id="auto" class="mark_seg">
 				<h3>Automotive</h3>
